--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <main class="main">
+        <div class="rotulo">
+            <div class="content-circle">
+              <div class="circle rojo"></div>
+              <div class="circle amarillo"></div>
+              <div class="circle verde"></div>
+            </div>
+            <div class="content-name">
+              <p class="name">@francoeromero</p>
+            </div>
+          </div>
         <div id="container">
             <h1>Anotador de emails</h1>
             <div id="input-container">
