--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Anotador de emails</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="./img/add_emails.png">
 </head>
 <body>
     <main class="main">
